# aimi-lung2-ct

./: .gitignore  LICENSE  README.md  download_idc_data.ipynb  model_performance.ipynb  pyproject.toml
