[tool.poetry]
name = "aimi-lung2-ct"
version = "0.1.0"
description = ""
authors = ["Jeff VanOss <jeff.vanoss@bamfhealth.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# segmentationmetrics = "^1.1.1"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
simpleitk = "^2.3.1"
ipykernel = "^6.29.5"
tqdm = "^4.66.5"
requests = "^2.32.3"
pydicom-seg = "^0.4.1"
google-cloud-bigquery = "^3.25.0"
google-cloud-bigquery-storage = { extras = [
    "pandas",
    "pyarrow",
], version = "^2.25.0" }
db-dtypes = "^1.2.0"
ipywidgets = "^8.1.3"
connected-components-3d = "^3.18.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.5.1"
pre-commit = "^3.3.3"

[tool.ruff]
target-version = "py39"
lint.select = ["I", "UP", "SIM"]
lint.ignore = ["UP007"]
lint.fixable = ["ALL"]

[tool.mypy]
implicit_optional = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
